adding notes.txt and azul web stuff

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <p>
         This is a web page With a great Style 
     </p>
+    <p>
+        Let tell you a story:
+        Somwhere was 3 pigs, and somthing happen with a wolf
+        with greats lungs
+    </p>
+    <p>Azul Web is the Wave</p>
 </body>
 </html>
