footer added in index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         Somwhere was 3 pigs, and somthing happen with a wolf
         with greats lungs
     </p>
+    
     <p>Azul Web is the Wave</p>
+
+    <footer>
+        This page was made by Alejandro Gonzalez
+        email to contact: alex1123.nel@gmail.com
+    </footer>
 </body>
 </html>
