More information to files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web Page</title>
 </head>
 <body>
+    <h3>What a great tittle has this page</h3>
     <h1>Hello World</h1>
     <p>
         This is a web page With a great Style 
