--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
         Somwhere was 3 pigs, and somthing happen with a wolf
         with greats lungs
     </p>
+
     <p>Azul Web is the Wave</p>
+
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Go to Start | </a>
+                    <a href="#">You wanna another history | </a>
+                    <a href="#">Go to Somewhere</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Social media | </a>
+                    <a href="#">Get a sandwich</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
 </html>
