--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         This is a web page With a great Style 
     </p>
     <p>
-        Let tell you a story:
+        Let me tell you a story:
         Somwhere was 3 pigs, and somthing happen with a wolf
         with greats lungs
     </p>
     
-    <p>Azul Web is the Wave</p>
+    <p>Azul School is the Wave</p>
 
 
     <header>
@@ -37,6 +37,8 @@
             </ul>
         </nav>
     </header>
+
+    <h5>Adding something to try with ssh protocol</h5>
 
     <footer>
         This page was made by Alejandro Gonzalez
