Modified footer index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <footer>
         This page was made by Alejandro Gonzalez
         email to contact: alex1123.nel@gmail.com
+        <ul>
+            <li><a href="https://github.com/atrect-5">My GitHub Profile</a></li>
+        </ul>
     </footer>
 
 </body>
