--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     
     <p>Azul Web is the Wave</p>
 
+    <section>
+        <h2>Adding a section to try Fixing merge probles in GitHub :3</h2>
+        Well, I'll put an image of something <br/>
+        <img src="https://cdn.pixabay.com/photo/2017/08/01/17/27/jellyfish-2566795_1280.jpg" alt="Imagen de medusas">
+
+    </section>
+
     <footer>
         This page was made by Alejandro Gonzalez
         email to contact: alex1123.nel@gmail.com
