Trying do a merge problem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World</h1>
     <p>
-        This is a web page With a great Style 
+        Somthing was deleted to try to make a merge problem
     </p>
     <p>
         Let tell you a story:
