--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Page</title>
+    <title>A simple Page</title>
 </head>
 <body>
     <h1>Hello World</h1>
     <p>
-        Somthing was deleted to try to make a merge problem
-    </p>
-    <p>
         Let tell you a story:
         Somwhere was 3 pigs, and somthing happen with a wolf
         with greats lungs
+    </p>
+    <p>
+        Somthing was deleted to try to make a merge problem
     </p>
     
     <p>Azul Web is the Wave</p>
