--- a/index.html
+++ b/index.html
@@ -44,10 +44,19 @@
     <h5>Adding something to try with ssh protocol</h5>
 
     <section>
+        <article>
         <h2>Adding a section to try Fixing merge probles in GitHub :3</h2>
         Well, I'll put an image of something <br/>
         <img src="https://cdn.pixabay.com/photo/2017/08/01/17/27/jellyfish-2566795_1280.jpg" alt="Imagen de medusas">
-
+        </article>
+        <article>
+            <h2>Here I'll put some of my hobbies:</h2><br/>
+            <ul>
+                <li>Play videogames</li>
+                <li>Play with my friends</li>
+                <li>Chess</li>
+            </ul>
+        </article>
     </section>
 
     <footer>
