CommitC From master to rebase

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>A simple Page</title>
 </head>
 <body>
+    <h4>This text was added in branch master to use rebase to merge</h4>
     <h3>What a great tittle has this page</h3>
     <h1>Hello World</h1>
     <p>
