--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>A simple Page</title>
 </head>
 <body>
+    <h1>Hello GitHub Pages</h1>
+    <hr>
+    <p>
+        Using GitHub Pages to publish this page
+    </p>
+    <hr>
     <h4>This text was added in branch master to use rebase to merge</h4>
     <h3>What a great tittle has this page</h3>
     <h1>Hello World</h1>
