Adding link to this project

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         email to contact: alex1123.nel@gmail.com
         <ul>
             <li><a href="https://github.com/atrect-5">My GitHub Profile</a></li>
+            <li><a href="https://github.com/atrect-5/Proyecto-AzulSchool">GitHub Project of this Page</a></li>
         </ul>
     </footer>
 
